Pretty much all bugs squashed, meets most requirements and optional, lots of room for refactoring

--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ main {
   color: var(--white);
   height: 8rem;
   font-size: 3rem;
+  line-height: 3.5rem;
   padding: 1rem;
 }
 
